# sunspot_workshop

./: README.md  package-lock.json  package.json  transact.ts
example/client/: invokeProgram.ts
example/program/: Cargo.toml
example/test_files/: sanction_checker.vk
keccakf/: Nargo.toml  Prover.toml
keccakf/src/: main.nr
ofac_checking_token/client/: invokeProgram.ts
ofac_checking_token/program/src/: vk.rs
ofac_checking_token/test_files/: sanction_checker.proof  sanction_checker.pw
summation/: Nargo.toml  Prover.toml
summation/src/: main.nr
